2013-07-06 Version 0.4.0

	* Memoize now supports being attached to an instance method

2013-06-20 Version 0.3.1

	* Minor change to class declarations.  Enforce new style python classes.

2013-06-12 Version 0.3.0

	* Initial release of context managers

2013-06-01 Version 0.2.0

	* Initial release of decorators

2013-06-01 Version 0.1.0

	* Initial release